# optd-original

./: Cargo.toml  README.md  tpch_diff.sh
.github/workflows/: tpch.yaml
datafusion-optd-cli/src/: main.rs
datafusion-optd_og-cli/: Cargo.toml  Cargo.toml~
datafusion-optd_og-cli/examples/: cli-session-context.rs
datafusion-optd_og-cli/src/: exec.rs  main.rs
datafusion-optd_og-cli/tests/: cli_integration.rs
datafusion-optd_og-cli/tpch-sf0_01/: populate.sql  simple_manual_test.sql  test.sql
dev/bench/: data.js  index.html
dev_scripts/: which_queries_work.sh
docs/: README.md  book.toml
docs/src/: SUMMARY.md  cost_model.md  cost_model_benchmarking.md  datafusion.md  datafusion_cli.md  demo_three_join.md  demo_tpch_q8.md  miscellaneous.md  optimizer.md  partial_exploration.md  plan_repr.md  properties.md  reoptimization.md  rule_engine.md  sqlplannertest.md
optd-core/: Cargo.toml
optd-core/src/: cascades.rs  cost.rs  lib.rs  node.rs  nodes.rs  optimizer.rs  physical.rs  physical_prop.rs  physical_property.rs  property.rs  rel_node.rs  rules.rs
optd-core/src/cascades/: memo.rs  optimizer.rs  scheduler.rs  tasks.rs  tasks2.rs
optd-core/src/cascades/memo/: disjoint_group.rs  disjoint_set.rs
optd-core/src/cascades/memo/disjoint_group/: set.rs
optd-core/src/cascades/tasks/: apply_rule.rs  explore_expr.rs  explore_group.rs  optimize_expr.rs  optimize_expression.rs  optimize_group.rs  optimize_inputs.rs
optd-core/src/gungnir/: mod.rs  stats.rs  tdigest.rs
optd-core/src/heuristics/: optimizer.rs
optd-core/src/rules/: ir.rs
optd-core/tests/gungnir/: gen-tcph.py  stats.rs
optd-datafusion-bridge/: Cargo.toml
optd-datafusion-bridge/src/: from_optd.rs  into_optd.rs  lib.rs
optd-datafusion-repr-adv-cost/src/: adv_cost.rs
optd-datafusion-repr-adv-cost/src/adv_cost/: agg.rs  filter.rs  join.rs  limit.rs
optd-datafusion-repr/src/: cost.rs  explain.rs  lib.rs  memo_ext.rs  physical_properties.rs  plan_nodes.rs  rules.rs  testing.rs
optd-datafusion-repr/src/cost/: adaptive_cost.rs  base_cost.rs  dummy_cost.rs
optd-datafusion-repr/src/plan_nodes/: agg.rs  apply.rs  empty_relation.rs  expr.rs  filter.rs  join.rs  limit.rs  macros.rs  projection.rs  scan.rs  sort.rs  subquery.rs  values.rs
optd-datafusion-repr/src/properties/: column_ref.rs  schema.rs
optd-datafusion-repr/src/rules/: eliminate_duplicated_expr.rs  eliminate_limit.rs  filter.rs  filter_join.rs  filter_pushdown.rs  joins.rs  macros.rs  physical.rs  project_remove.rs  project_transpose.rs  projection_pushdown.rs
optd-datafusion-repr/src/testing/: dummy_cost.rs  tpch_catalog.rs
optd-gungnir/src/stats/: hyperloglog.rs  tdigest.rs
optd-ng-kernel/: Cargo.toml
optd-ng-kernel/src/: cascades.rs  lib.rs  nodes.rs
optd-ng-kernel/src/cascades/: memo.rs  naive_memo.rs  optimizer.rs  persistent_memo.rs
optd-ng-kernel/src/tests/: common.rs
optd-perftest/src/: csv2parquet.rs  datafusion_dbms.rs  job.rs  main.rs
optd-persistent-memo/: Cargo.toml
optd-persistent-memo/src/: backend_manager.rs  lib.rs
optd-sqlplannertest/: Cargo.toml
optd-sqlplannertest/src/: lib.rs
optd-sqlplannertest/tests/: filter.planner.sql  join_enumerate.yml  old_tpch.planner.sql  tpch.planner.sql
optd-sqlplannertest/tests/basic/: eliminate_duplicated_expr.planner.sql  eliminate_limit.planner.sql  empty_relation.planner.sql  filter.planner.sql  verbose.planner.sql
optd-sqlplannertest/tests/joins/: join_enumerate.planner.sql
optd-sqlplannertest/tests/subqueries/: subquery_unnesting.planner.sql
optd-sqlplannertest/tests/tpch/: q13.planner.sql  q16.planner.sql  q17.planner.sql  q2.planner.sql  q20.planner.sql  q22.planner.sql  q4.planner.sql  tpch-01-05.planner.sql  tpch-06-10.planner.sql
optd-sqlplannertest/tests/utils/: memo_dump.planner.sql
optd_og-adaptive-demo/: Cargo.toml  Cargo.toml~
optd_og-core/: #Cargo.toml#  Cargo.toml  Cargo.toml~
optd_og-core/src/cascades/: memo.rs  optimizer.rs  tasks2.rs
optd_og-datafusion-bridge/: Cargo.toml  Cargo.toml~
optd_og-datafusion-bridge/src/: from_optd.rs  from_optd.rs~  into_optd.rs  lib.rs  lib.rs~  physical_collector.rs
optd_og-datafusion-repr/: Cargo.toml  Cargo.toml~
optd_og-datafusion-repr-adv-cost/: Cargo.toml  Cargo.toml~
optd_og-datafusion-repr-adv-cost/src/: adv_stats.rs  lib.rs
optd_og-datafusion-repr-adv-cost/src/adv_stats/: agg.rs  filter.rs  join.rs  limit.rs  stats.rs
optd_og-datafusion-repr/src/: explain.rs  lib.rs  memo_ext.rs  optimizer_ext.rs  plan_nodes.rs  testing.rs  utils.rs
optd_og-datafusion-repr/src/cost/: adaptive_cost.rs  base_cost.rs
optd_og-datafusion-repr/src/plan_nodes/: empty_relation.rs  macros.rs  scan.rs  (+1 more)
optd_og-gungnir/: Cargo.toml
optd_og-perfbench/: Cargo.toml  Cargo.toml~
optd_og-perfbench/src/: cardbench.rs  datafusion_dbms.rs  main.rs  shell.rs
optd_og-perfbench/tests/: cardtest_integration.rs
optd_og-sqllogictest/: Cargo.toml  Cargo.toml~
optd_og-sqllogictest/slt/: _tpch_tables.slt.part
optd_og-sqllogictest/src/: lib.rs
optd_og-sqllogictest/tests/: harness.rs
optd_og-sqlplannertest/: Cargo.toml  Cargo.toml~  README.md
optd_og-sqlplannertest/benches/: planner_bench.rs
optd_og-sqlplannertest/src/: lib.rs
optd_og-sqlplannertest/tests/: planner_test.rs
optd_og-sqlplannertest/tests/basic/: basic_nodes.yml  cross_product.yml  eliminate_duplicated_expr.yml  eliminate_limit.yml  eliminate_proj.yml  empty_relation.yml  filter.yml  verbose.yml
optd_og-sqlplannertest/tests/expressions/: redundant_exprs.yml
optd_og-sqlplannertest/tests/joins/: join_enumerate.yml  multi-join.yml  self-join.yml
optd_og-sqlplannertest/tests/pushdowns/: fliter_transpose.yml
optd_og-sqlplannertest/tests/subqueries/: subquery_unnesting.yml
optd_og-sqlplannertest/tests/tpch/: bench_populate.sql  q1.yml  q10.yml  q11.yml  q12.yml  q13.yml  q14.yml  q15.yml  q16.yml  q17.yml  q18.yml.disabled  q19.yml  q2.yml  q20.yml  q21.yml.disabled  q22.yml  q3.yml  q4.yml  q5.yml  q6.yml  q7.yml  q8.yml  q9.yml
optd_og-sqlplannertest/tests/utils/: memo_dump.yml
warmup/: 1.sql  2.sql  3.sql  4.sql  5.sql
(+77 files in other folders)
