[package]
name = "optd-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
num-traits = "0.2"
num-derive = "0.2"
tracing = "0.1"
ordered-float = "4"
tracing-subscriber = "0.3"
pretty-xmlish = "0.1"
itertools = "0.11"
parquet = "50.0.0"
arrow = "5.0.0"
arrow-schema = "50.0.0"
rand = "0.8.4"

[[test]]
name = "gungnir-stats"
path = "tests/gungnir/stats.rs"