[package]
name = "optd-ng-kernel"
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
arrow-schema = "47.0.0"
tracing = "0.1"
ordered-float = "4"
itertools = "0.13"
serde = { version = "1.0", features = ["derive", "rc"] }
chrono = "0.4"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
] } # TODO: strip the features, move to another crate
serde_json = { version = "1" } # TODO: move to another crate

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
