[package]
name = "optd-persistent-memo"
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
optd-persistent = { git = "https://github.com/cmu-db/optd-experimental", branch = "yuchen/orm-integration" }
optd-core = { path = "../optd-core", version = "0.1" }
futures-lite.workspace = true
